--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="form-box">
-            <form action="#">
+            <form action="#" class="LoginForm">
                 <h2>Login</h2>
                 <div class="input-box">
                     <input type="text" name="" id="" required>
@@ -31,7 +31,31 @@
                 </div>
                 <button class="btn">Sign in</button>
                 <div class="account-creation">
-                    <span>Don't have an account ? <a href="#">Register</a></span>
+                    <span>Don't have an account ? <a href="#" class="RegisterLink">Register</a></span>
+                </div>
+            </form>
+
+            <form action="#" class="RegisterForm">
+                <h2>Register</h2>
+                <div class="input-box">
+                    <input type="text" name="" id="" required>
+                    <label>Username</label>
+                    <i class='bx bxs-user'></i>
+                </div>
+                <div class="input-box">
+                    <input type="password" name="" id="" required>
+                    <label>Password</label>
+                    <i class='bx bxs-lock-alt'></i>
+                </div>
+                <div class="input-box">
+                    <input type="password" name="" id="" required>
+                    <label>Confirm Password</label>
+                    <i class='bx bxs-lock-alt'></i>
+                </div>
+                
+                <button class="btn">Sign up</button>
+                <div class="account-creation">
+                    <span>Already have an account ? <a href="#" class="LoginLink">Login</a></span>
                 </div>
             </form>
         </div>
